5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1837_3218.log
== TEST (2019-07-02 00:15:00) 
-- CODE:
from numpy import *
mat = array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i=j):
			k = sum(mat[i,j])
print(k)
-- ERROR:
File "XXXX", line 5
    if(i=j):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:15:42) 
-- CODE:
from numpy import *
mat = array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i=j):
			sum(mat[i,j])
print(k)
-- ERROR:
File "XXXX", line 5
    if(i=j):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:15:57) 
-- CODE:
from numpy import *
mat = array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i==j):
			sum(mat[i,j])
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:19:12) 
-- CODE:
from numpy import *
mat = array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i==j):
			k=sum(mat[i,j])
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:20:27) 
-- CODE:
from numpy import *
mat = array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i==j):
			k=sum(mat[i,j])
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:20:59) 
-- CODE:
from numpy import *
mat = array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if(i==j):
			k=sum(mat[i,j])
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
